--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/reset.css" />
-  <link rel="stylesheet" href="./css/style.css">
-  <!-- <link rel="stylesheet" href="./css/base.css" /> -->
-  <!-- <link rel="stylesheet" href="./css/layout.css" /> -->
-  <!-- <link rel="stylesheet" href="./css/module.css" /> -->
+  <!-- <link rel="stylesheet" href="./css/test.css"> -->
+  <link rel="stylesheet" href="./css/base.css" />
+  <link rel="stylesheet" href="./css/layout.css" />
+  <link rel="stylesheet" href="./css/module.css" />
 
   <title>Responsive Web Design 301 - Lab 4</title>
 </head>
